--- a/index.css
+++ b/index.css
@@ -1,27 +1,9 @@
-.card {
-    padding: 1px;
-    margin-top: 10px;
-    border: 1px solid black;
-    border-radius: 25px;
-}
-
-.card-img-top {
-    width: 100%;
-    height: auto;
-    border-radius: 25px;
-}
-
-.card-title{ 
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.btn {
-    border-radius: 25px;
-}
-
-.st{
-    text-align: center;
-    font-size: 20px;
+#Create{
+    
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
